fixing extra spacing caused by navbar styling

--- a/client/src/components/NavBar/NavBar.css
+++ b/client/src/components/NavBar/NavBar.css
@@ -3,7 +3,6 @@ body {
 }
 
 .navbar-container {
-  width: 100%; 
   margin: none;
   padding: 12px;
   background-color: lightgray;
